AX: Tables with one row of all header cells should not be exposed as data tables https://bugs.webkit.org/show_bug.cgi?id=267056 rdar://119941473

Reviewed by Tyler Wilcock.

Due to logic in isDataTable, we currently expose tables with one row of all header
cells as data tables. But, most other single-row tables are considered layout tables.

This patch updates out logic to consider this markup a layout table.

AXObjectCache::childrenChanged was also updated to recompute a tables exposability when
rows change outside of table sections (tbody, thead, tfoot).

* LayoutTests/accessibility/single-th-layout-table-expected.txt: Added.
* LayoutTests/accessibility/single-th-layout-table.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::childrenChanged):
* Source/WebCore/accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::isDataTable const):

Canonical link: https://commits.webkit.org/272716@main