Source/WebCore/accessibility/AccessibilityTable.cpp
@@ -335,8 +335,8 @@ bool AccessibilityTable::isDataTable() const
             elementsToVisit.push(currentElement);
         }
 
-        // If the first row is comprised of all <th> tags, assume it is a data table.
-        if (firstRow && currentParent == firstRow && rowIsAllTableHeaderCells && cellCountForEachRow.get(currentParent.get()) >= 1)
+        // If the first row of a multi-row table is comprised of all <th> tags, assume it is a data table.
+        if (firstRow && currentParent == firstRow && rowIsAllTableHeaderCells && cellCountForEachRow.get(currentParent.get()) >= 1 && rowCount >= 2)
             return true;
     }
 
